# MarketViewer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  app.files
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: CMakeCCompilerId.c.253C83DC6693B4A1.idx  CMakeCXXCompilerId.cpp.C6C2E059CE64CF74.idx  SQL_create.c.0E70AFB51811778C.idx  SQL_read.c.D1E9408A1DC683AF.idx  Stock_Data.c.FF4B583B28563151.idx  app.config.3A13F1E53EB14A09.idx  free.c.4032F6EE454DC895.idx  interface.cpp.56A6C8041B87FA3D.idx  jansson.h.4566A4164682B80A.idx  jansson_config.h.218A8561996B34BA.idx  json_read_stocks.c.6D60EC5825291AC8.idx  moc_predefs.h.165C6172A3B3042E.idx  mocs_compilation.cpp.1291118828A07EC3.idx  order.cpp.FCD388118E3C5DBE.idx  stdarg.h.BB5BE8C18CD39EE5.idx  stdbool.h.1F5EE282E8CB108F.idx  stock.h.601A908676459C6B.idx
Applicazione/: CMakeLists.txt  SQL_create.c  SQL_read.c  Stock_Data.c  free.c  interface.cpp  json_read_stocks.c  libjson.c  main.cpp  order.cpp  read_file-NOLONGERUSED.txt  read_file_implementation.c  stock.h
app/:  error_rules.txt  .swp  CMakeLists.txt  SQL_create.c  SQL_read.c  Stock_Data.c  app.cpp  btcusd.json  chfeur.json  chfjpy.json  chfusd.json  ethusd.json  free.c  icon.icns  interface.cpp  interface.hpp  json.c  jsonParseCurrencies.c  json_parse_active.c  json_parse_sentiment.c  json_read_stocks.c  logger.c  logs.txt  mainwindow.cpp  order.cpp  scrollareas.cpp  sidebar.cpp  solusd.json  stock.h  stock_data_active.json  stock_data_sentiment.json  stockdata.db
app/libs/: libcurl.4.dylib  libjansson.4.dylib  libsqlite3.0.dylib
